// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpdateGraph /> should render 1`] = `
<div
  className="ocm-upgrade-graph"
>
  <GraphContainer>
    <GraphPath
      current={true}
    >
      <GraphLine>
        <VersionLabel>
          current version
        </VersionLabel>
        <VersionDot
          current={true}
        />
      </GraphLine>
      <GraphLine />
      <GraphLine>
        <VersionLabel>
          next version
        </VersionLabel>
        <VersionDot />
      </GraphLine>
    </GraphPath>
  </GraphContainer>
  <Connect(UpgradeAcknowledgeWarning)
    isInfo={true}
    isPlain={true}
    showConfirm={true}
  />
  <Connect(MinorVersionUpgradeConfirm) />
</div>
`;

exports[`<UpdateGraph /> should render when additional versions are available 1`] = `
<div
  className="ocm-upgrade-graph"
>
  <GraphContainer>
    <GraphPath
      current={true}
    >
      <GraphLine>
        <VersionLabel>
          1.2.3
        </VersionLabel>
        <VersionDot
          current={true}
        />
      </GraphLine>
      <GraphLine />
      <GraphLine>
        <VersionLabel>
          1.2.4
        </VersionLabel>
        <VersionDot />
      </GraphLine>
    </GraphPath>
  </GraphContainer>
  <div
    className="ocm-upgrade-additional-versions-available"
  >
    <InfoCircleIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
    Additional versions available between 1.2.3 and 1.2.4
  </div>
  <Connect(UpgradeAcknowledgeWarning)
    isInfo={true}
    isPlain={true}
    showConfirm={true}
  />
  <Connect(MinorVersionUpgradeConfirm) />
</div>
`;

exports[`<UpdateGraph /> should render with no updates available 1`] = `
<div
  className="ocm-upgrade-graph"
>
  <GraphContainer>
    <GraphPath
      current={true}
    >
      <GraphLine>
        <VersionLabel>
          1.2.3
        </VersionLabel>
        <VersionDot
          current={true}
        />
      </GraphLine>
    </GraphPath>
  </GraphContainer>
  <Connect(UpgradeAcknowledgeWarning)
    isInfo={true}
    isPlain={true}
    showConfirm={true}
  />
  <Connect(MinorVersionUpgradeConfirm) />
</div>
`;
